--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
           here you will see the answer...
         </p>
         <div>
-          <span class="category" aria-label="category html"
-            ><a href="">#html</a></span
+          <span class="category" aria-label="category hakuna-matata"
+            ><a href="">#Hakuna-Matata</a></span
           >
-          <span class="category" aria-label="category flexbox">
-            <a href="">#flexbox</a>
+          <span class="category" aria-label="category geometry">
+            <a href="">#geometry</a>
           </span>
-          <span class="category" aria-label="category css"
-            ><a href="">#css</a></span
+          <span class="category" aria-label="category languages"
+            ><a href="">#languages</a></span
           >
         </div>
       </div>
@@ -66,14 +66,14 @@
           here you will see the answer...
         </p>
         <div>
-          <span class="category" aria-label="category html"
-            ><a href="">#html</a></span
+          <span class="category" aria-label="category hakuna-matata"
+            ><a href="">#Hakuna-Matata</a></span
           >
-          <span class="category" aria-label="category flexbox">
-            <a href="">#flexbox</a>
+          <span class="category" aria-label="category geometry">
+            <a href="">#geometry</a>
           </span>
-          <span class="category" aria-label="category css"
-            ><a href="">#css</a></span
+          <span class="category" aria-label="category languages"
+            ><a href="">#languages</a></span
           >
         </div>
       </div>
@@ -98,14 +98,14 @@
           here you will see the answer...
         </p>
         <div>
-          <span class="category" aria-label="category html"
-            ><a href="">#html</a></span
+          <span class="category" aria-label="category hakuna-matata"
+            ><a href="">#Hakuna-Matata</a></span
           >
-          <span class="category" aria-label="category flexbox">
-            <a href="">#flexbox</a>
+          <span class="category" aria-label="category geometry">
+            <a href="">#geometry</a>
           </span>
-          <span class="category" aria-label="category css"
-            ><a href="">#css</a></span
+          <span class="category" aria-label="category languages"
+            ><a href="">#languages</a></span
           >
         </div>
       </div>
@@ -130,14 +130,14 @@
           here you will see the answer...
         </p>
         <div>
-          <span class="category" aria-label="category html"
-            ><a href="">#html</a></span
+          <span class="category" aria-label="category hakuna-matata"
+            ><a href="">#Hakuna-Matata</a></span
           >
-          <span class="category" aria-label="category flexbox">
-            <a href="">#flexbox</a>
+          <span class="category" aria-label="category geometry">
+            <a href="">#geometry</a>
           </span>
-          <span class="category" aria-label="category css"
-            ><a href="">#css</a></span
+          <span class="category" aria-label="category languages"
+            ><a href="">#languages</a></span
           >
         </div>
       </div>
