remove one onlick function from first quizcard

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           alt="checked bookmark"
           class="bookmark-icon"
           id="check--bookmark"
-          onclick="changeBookmark();bookmarkChecked()"
+          onclick="changeBookmark()"
         />
         <h3>In what language is the phrase ‘Hakuna Matata’?</h3>
         <button
