add ColorMode with red-yellow contrast color theme

--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,10 @@
     <main>
       <div class="toggle_color-mode">
         <button aria-label="toggle-colormode" onclick="colorMode()">
-          ColorMode
+          Color Mode
+        </button>
+        <button aria-label="toggle-darkmode" onclick="darkMode()">
+          Dark Mode
         </button>
       </div>
       <div class="profile">
