remove lo in nav bar - typo

--- a/bookmark.html
+++ b/bookmark.html
@@ -136,25 +136,28 @@
     <footer>
       <nav>
         <ul>
-          <li></lo><a href="index.html"
-                    ><img
-                      src="img/home.png"
-                      alt="homepage button"
-                      class="nav_button"
-                  /></a></li>
-                  <li><a href="bookmark.html"
-                    ><img
-                      src="img/bookmrk.png"
-                      alt="bookmark-page button"
-                      class="nav_button_bookmark"
-                  /></a></li>
-                  <li><a href="profile.html"
-                    ><img
-                      src="img/profile.png"
-                      alt="profile-page button"
-                      class="nav_button"
-                  /></a></li>
-                </ul>
+          <li>
+            <a href="index.html"
+              ><img src="img/home.png" alt="homepage button" class="nav_button"
+            /></a>
+          </li>
+          <li>
+            <a href="bookmark.html"
+              ><img
+                src="img/bookmrk.png"
+                alt="bookmark-page button"
+                class="nav_button_bookmark"
+            /></a>
+          </li>
+          <li>
+            <a href="profile.html"
+              ><img
+                src="img/profile.png"
+                alt="profile-page button"
+                class="nav_button"
+            /></a>
+          </li>
+        </ul>
       </nav>
     </footer>
     <script src="script.js"></script>
