--- a/profile.html
+++ b/profile.html
@@ -33,7 +33,10 @@
           Hello :D, I'm Jaan and I love too do Quiz Apps all day long. I do Quiz
           Apss on every topic from Biology to Coding to city-names to chocolates
           flavours... You name it.. I play it!
-          <button aria-label="test-button for bookmarkcounter" id="check--bookmark">
+          <button
+            aria-label="test-button for bookmarkcounter"
+            id="check--bookmark"
+          >
             bookmark-counter-test
           </button>
         </section>
@@ -52,25 +55,28 @@
     <footer>
       <nav>
         <ul>
-          <li></lo><a href="index.html"
-                    ><img
-                      src="img/home.png"
-                      alt="homepage button"
-                      class="nav_button"
-                  /></a></li>
-                  <li><a href="bookmark.html"
-                    ><img
-                      src="img/bookmrk.png"
-                      alt="bookmark-page button"
-                      class="nav_button"
-                  /></a></li>
-                  <li><a href="profile.html"
-                    ><img
-                      src="img/profile.png"
-                      alt="profile-page button"
-                      class="nav_button_profile"
-                  /></a></li>
-                </ul>
+          <li>
+            <a href="index.html"
+              ><img src="img/home.png" alt="homepage button" class="nav_button"
+            /></a>
+          </li>
+          <li>
+            <a href="bookmark.html"
+              ><img
+                src="img/bookmrk.png"
+                alt="bookmark-page button"
+                class="nav_button"
+            /></a>
+          </li>
+          <li>
+            <a href="profile.html"
+              ><img
+                src="img/profile.png"
+                alt="profile-page button"
+                class="nav_button_profile"
+            /></a>
+          </li>
+        </ul>
       </nav>
     </footer>
   </body>
