adding a standar mode button to reset colorthemes

--- a/profile.html
+++ b/profile.html
@@ -12,6 +12,9 @@
     </header>
     <main>
       <div class="toggle_color-mode">
+        <button aria-label="toggle-normal-mode" onclick="standardMode()">
+          standard Mode
+        </button>
         <button aria-label="toggle-colormode" onclick="colorMode()">
           Color Mode
         </button>
