create javascript for form and set it up

--- a/cards.html
+++ b/cards.html
@@ -192,5 +192,6 @@
       </nav>
     </footer>
     <script src="script.js"></script>
+    <script src="quizcard-form.js"></script>
   </body>
 </html>
