added Create Element form to my cards html

--- a/cards.html
+++ b/cards.html
@@ -12,7 +12,7 @@
       <img src="img/question-145_128.gif" alt="arising questionmark" />
       <p data-js="p-tag-counter">TEST</p>
     </header>
-    <main>
+    <main data-js="main">
       <div class="quizcard" aria-labelledby="Quizcard">
         <img
           src="img/bookmrk.png"
