add plus section and page to nav-bar, update the show-answer function

--- a/cards.html
+++ b/cards.html
@@ -174,10 +174,7 @@
         <ul>
           <li>
             <a href="index.html"
-              ><img
-                src="img/home.png"
-                alt="homepage button"
-                class="nav_button_home"
+              ><img src="img/home.png" alt="homepage button" class="nav_button"
             /></a>
           </li>
           <li>
@@ -186,6 +183,14 @@
                 src="img/bookmrk.png"
                 alt="bookmark-page button"
                 class="nav_button"
+            /></a>
+          </li>
+          <li>
+            <a href="cards.html"
+              ><img
+                src="/img/addquestion.ico"
+                alt="add-question-page button"
+                class="nav_button_add-question"
             /></a>
           </li>
           <li>
