--- a/index.html
+++ b/index.html
@@ -162,6 +162,14 @@
             /></a>
           </li>
           <li>
+            <a href="cards.html"
+              ><img
+                src="/img/addquestion.ico"
+                alt="add-question-page button"
+                class="nav_button_add-question"
+            /></a>
+          </li>
+          <li>
             <a href="profile.html"
               ><img
                 src="img/profile.png"
