--- a/cards.html
+++ b/cards.html
@@ -14,39 +14,11 @@
     </header>
     <main data-js="main">
       <button data-js="fold-cards-button">fold up old cards</button>
-      <div aria-labelledby="foldable quizcards" data-js="foldable-cards">
-        <div class="quizcard" aria-labelledby="Quizcard">
-          <img
-            src="img/bookmrk.png"
-            alt="checked bookmark"
-            class="bookmark-icon"
-            id="check--bookmark"
-            onclick="changeBookmark()"
-          />
-          <h3>In what language is the phrase ‘Hakuna Matata’?</h3>
-          <button
-            onclick="show()"
-            class="answer-button"
-            data-js="answer-button"
-            aria-label="Show Answer"
-          >
-            Show Answer
-          </button>
-          <p class="showanswer" id="showanswer" data-js="answer-text">
-            here you will see the answer...
-          </p>
-          <div>
-            <span class="category" aria-label="category hakuna-matata"
-              ><a href="">#Hakuna-Matata</a></span
-            >
-            <span class="category" aria-label="category geometry">
-              <a href="">#geometry</a>
-            </span>
-            <span class="category" aria-label="category languages"
-              ><a href="">#languages</a></span
-            >
-          </div>
-        </div>
+      <div
+        aria-labelledby="foldable quizcards"
+        class=".quizcards__hide"
+        data-js="foldable-cards"
+      >
         <div class="quizcard" aria-labelledby="Quizcard">
           <img
             src="img/bookunmrk.png"
@@ -79,83 +51,27 @@
             >
           </div>
         </div>
-        <div class="quizcard" aria-labelledby="Quizcard">
-          <img
-            src="img/bookmrk.png"
-            alt="checked bookmark"
-            class="bookmark-icon"
-            id="check--bookmark3"
-            onclick="changeBookmark3()"
-          />
-          <h3>What geometric shape is generally used for stop signs?</h3>
-          <button
-            onclick="show3()"
-            class="answer-button"
-            data-js="answer-button3"
-            aria-label="Show Answer"
-          >
-            Show Answer
-          </button>
-          <p class="showanswer" id="showanswer3" data-js="answer-text3">
-            here you will see the answer...
-          </p>
-          <div>
-            <span class="category" aria-label="category hakuna-matata"
-              ><a href="">#Hakuna-Matata</a></span
-            >
-            <span class="category" aria-label="category geometry">
-              <a href="">#geometry</a>
-            </span>
-            <span class="category" aria-label="category languages"
-              ><a href="">#languages</a></span
-            >
-          </div>
-        </div>
-        <div class="quizcard" aria-labelledby="Quizcard">
-          <img
-            src="img/bookunmrk.png"
-            alt="unchecked bookmark"
-            class="bookmark-icon"
-            onclick="changeBookmark4()"
-            id="check--bookmark4"
-          />
-          <h3>How many languages are written from right to left?</h3>
-          <button
-            onclick="show4()"
-            class="answer-button"
-            data-js="answer-button4"
-            aria-label="Show Answer"
-          >
-            Show Answer
-          </button>
-          <p class="showanswer" id="showanswer4" data-js="answer-text4">
-            here you will see the answer...
-          </p>
-          <div>
-            <span class="category" aria-label="category hakuna-matata"
-              ><a href="">#Hakuna-Matata</a></span
-            >
-            <span class="category" aria-label="category geometry">
-              <a href="">#geometry</a>
-            </span>
-            <span class="category" aria-label="category languages"
-              ><a href="">#languages</a></span
-            >
-          </div>
-        </div>
       </div>
       <br />
       <br />
       <section class="quiz-question-form">
         <form data-js="question-form" aria-label="create quiz-questions form">
           <label for="question">Your Question...</label>
-          <input
-            id="question"
+          <textarea
             type="text"
             name="question"
-            data-js="question"
+            id="question"
+            data-js="question-input"
+            placeholder="Enter your question"
             maxlength="100"
-          />
+          ></textarea>
+          <!--<input
+            type="text"
+            name="question"
+            data-js="question-characters"
+            id="question-characters"
+            maxlength="100"
+          />-->
           <span data-js="question-characters">100/100</span>
           <br /><br />
           <label for="answer">Your Answer...</label>
@@ -163,7 +79,7 @@
             id="answer"
             type="text"
             name="answer"
-            data-js="answer"
+            data-js="answer-input"
             maxlength="100"
           />
           <span data-js="answer-characters">100/100</span>
@@ -173,7 +89,7 @@
             id="tags"
             type="text"
             name="tags"
-            data-js="tags"
+            data-js="tags-input"
             maxlength="100"
           />
           <span data-js="tags-characters">100/100</span>
