update NewQuestion Button

--- a/V2/index.html
+++ b/V2/index.html
@@ -18,35 +18,8 @@
         <ul>
           <li>
             <a href="index.html"
-              ><img
-                src="../img/home.png"
-                alt="homepage button"
-                class="nav_button_home"
-            /></a>
-          </li>
-          <li>
-            <a href="bookmark.html"
-              ><img
-                src="../img/bookmrk.png"
-                alt="bookmark-page button"
-                class="nav_button"
-            /></a>
-          </li>
-          <li>
-            <a href="cards.html"
-              ><img
-                src="../img/addquestion.ico"
-                alt="add-question-page button"
-                class="nav_button"
-            /></a>
-          </li>
-          <li>
-            <a href="profile.html"
-              ><img
-                src="../img/profile.png"
-                alt="profile-page button"
-                class="nav_button"
-            /></a>
+              ><button class="refresh_button">New Question</button></a
+            >
           </li>
         </ul>
       </nav>
